--- a/frontend/src/components/Calendar/calendar.css
+++ b/frontend/src/components/Calendar/calendar.css
@@ -1,5 +1,21 @@
 .calendar-container{
     padding: 0 2rem;
     box-sizing: border-box;
-    width: 100%;
+}
+
+.calendar-container table{
+    text-align: center;
+    border-spacing: 10px;
+}
+
+.calendar-container table td{
+    border-radius: 25px;
+}
+
+.calendar-header{
+    text-align: center;
+}
+
+.selected-day{
+    background-color: #CFD8DC;
 }
